# cargo-multiarch

./: .gitignore  Cargo.toml  Cargo.toml.bak  README.md
src/: cargo_config_loader.rs  cargo_msg_parser.rs  cli.rs  compile_multiarch.rs  gen_fatbin_pkg.rs  main.rs  rustc_queries.rs
src/multiarch-dispatch/: Cargo.toml  build.rs
src/multiarch-dispatch/docs/: design_space.md
src/multiarch-dispatch/src/: binary_flavors.rs  lib.rs
src/multiarch-dispatch/src/binary_flavors/: exec_memory.rs  features_x86.rs
