[package]
name = "cargo-multiarch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
cargo_metadata = "0.19.1"
clap = { version = "4.5", features = ["derive", "cargo"] }
clap-cargo = { version = "0.15.1", features = ["cargo_metadata"] }
console = "0.15.10"
escargot = "0.5.13"
indicatif = "0.17.9"
indoc = "2.0.5"
itertools = "0.14.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_with = "3.12.0"
sha2 = "0.11.0-pre.4" # We want SHA2 HW-accel everywhere
target-lexicon = "0.13.1"
