[package]
name = "multiarch-dispatch"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
notstd_detect = "0.4.0"
phf = { version = "0.11", features = ["macros"] }
proc-exit = "2.0.2"
qbsdiff = "1.4.2"
zstd = "0.13.2"

[target.'cfg(any(target_os = "android", target_os = "dragonfly", target_os = "freebsd", target_os = "linux", target_os = "openbsd", target_os = "netbsd", target_os = "solaris"))'.dependencies]
rustix = { version = "0.38.43", features = ["fs"] }
libc = "0.2.169"

[build-dependencies]
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1"
quote = { version = "1.0.38", default-features = false }
qbsdiff = "1.4.2"
zstd = "0.13.2"
proc-exit = "2"
